fix z-index

--- a/src/components/MapPage/MapPage-phone.css
+++ b/src/components/MapPage/MapPage-phone.css
@@ -15,6 +15,7 @@
         top: calc(-1 * var(--button-height));
         right: 50%;
         transform: translate(50%, 0);
+        z-index: var(--z-main);
     }
 
     /* Блок удерживающий картинку по центру */
